handle un-replaced template variables in http exporter. fixes #86